[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/UI/Fighting/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/UI/Fighting/StatusBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/UI/Fighting/CharacterContainer.gd" type="Script" id=3]
[ext_resource path="res://scenes/UI/Fighting/FightSceneHover.gd" type="Script" id=4]
[ext_resource path="res://scenes/UI/Fighting/AnimationCharacter.gd" type="Script" id=5]
[ext_resource path="res://Assets/images/bars/SeletionMarker.png" type="Texture" id=6]
[ext_resource path="res://Assets/Animations/Attacks/Test/TestAnimations.tres" type="SpriteFrames" id=7]
[ext_resource path="res://Assets/images/chars/Illustration20.png" type="Texture" id=9]

[node name="CharacterContainer" type="Control"]
margin_top = 1.99997
margin_right = 200.0
margin_bottom = 442.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 200, 440 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPImage" type="VBoxContainer" parent="."]
margin_right = 200.0
margin_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HPImage"]
margin_right = 200.0
margin_bottom = 380.0

[node name="TextureRect" type="TextureRect" parent="HPImage/CenterContainer"]
margin_right = 200.0
margin_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 380 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="HPImage/CenterContainer/TextureRect"]
light_mask = 63
position = Vector2( 100, 210 )
frames = ExtResource( 7 )
animation = "Test01"
script = ExtResource( 5 )

[node name="StatusBar" parent="HPImage" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 380.0
margin_right = 200.0
margin_bottom = 410.0
rect_min_size = Vector2( 0, 30 )

[node name="HealthBar" parent="HPImage" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 410.0
margin_right = 200.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 30 )
value = 100

[node name="SelectionSign" type="TextureRect" parent="."]
margin_top = 233.0
margin_right = 200.0
margin_bottom = 383.0
rect_min_size = Vector2( 200, 100 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 200.0
margin_bottom = 427.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="HPImage/CenterContainer/TextureRect/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="HPImage/CenterContainer/TextureRect/AnimatedSprite" to="HPImage/CenterContainer/TextureRect/AnimatedSprite" method="_on_AnimatedSprite_animation_finished"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
